Fix contrast

--- a/css/main.css
+++ b/css/main.css
@@ -232,6 +232,10 @@ li {
   cursor: pointer;
 }
 
+#contrast-button img {
+  filter: invert(73%) sepia(61%) saturate(6081%) hue-rotate(332deg) brightness(99%) contrast(104%);
+}
+
 .dropdown-list {
   display: flex;
   align-items: center;
